# Axiom

./: .gitignore  Axiom_Demo.ipynb  Axiom_Semiconductor_Demo.ipynb  BENCHMARKS.md  LICENSE  PLAN-500M-TRAINING.md  README.md  Retrain_500M_v2.ipynb  Run_Benchmarks.ipynb  Self_Distill.ipynb  Self_Distill_50K.ipynb  Train_Axiom_500M.ipynb  app.py  demo.py  demo_simple.py  governance_trace.json  pyproject.toml  requirements.txt
models/axiom/: bpe_tokenizer.json  mdlm_best.pt
pipeline/: __init__.py  cli.py  types.py
pipeline/benchmark/: __init__.py  governance_suite.py
pipeline/distill/: __init__.py  prompt.py  run.py  self_distill.py
pipeline/ingest/: __init__.py  chat_archive.py  claude_archive.py
pipeline/mdlm/: __init__.py  decoder.py  decoder_500m.py  governed_pipeline.py  model.py  tokenizer.py  train.py
pipeline/stages/: __init__.py  s1_segment.py  s2_classify.py  s3_decompose.py  s4_validate.py  s5_emit.py
scripts/: build_decoder_v2.py  hypothesis_test_369.py  train_500m.py  train_500m_v2.py
specs/: PLAN-AXIOM-001_v0_1_0.md
tests/: test_stages.py  test_types.py
