[project]
name = "triad-pipeline"
version = "0.1.0"
description = "TRIAD Decomposition Pipeline — Governed Generation Pipeline Phase 1"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
triad-pipeline = "pipeline.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
